# ebpfsentinel

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.agent  Dockerfile.warden  QUICKSTART.md  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  openapi.json  rustfmt.toml
crates/adapters/: Cargo.toml  build.rs
crates/adapters/benches/: ebpf_map_ops.rs  grpc_serialization.rs  storage.rs
crates/adapters/src/: lib.rs  metrics.rs  system.rs  system_metrics.rs
crates/adapters/src/alert/: email_sender.rs  log_sender.rs  mod.rs  otlp_sender.rs  webhook_sender.rs
crates/adapters/src/alias/: alias_resolution_adapter.rs  mod.rs
crates/adapters/src/audit/: log_audit_sink.rs  mod.rs
crates/adapters/src/auth/: api_key_provider.rs  composite_provider.rs  jwt_provider.rs  mod.rs  oidc_provider.rs  revocation.rs
crates/adapters/src/container/: cgroupfs_resolver.rs  docker_cache.rs  docker_client.rs  docker_enricher.rs  k8s_enricher.rs  mod.rs  proc_resolver.rs
crates/adapters/src/ebpf/: arena.rs  arena_event_reader.rs  arena_metrics.rs  bpf_token.rs  config_flags_manager.rs  config_ringbuf_writer.rs  conntrack_map_manager.rs  cpumap.rs  dlp_attach.rs  dlp_event_reader.rs  dns_event_reader.rs  ebpf_map_write_adapter.rs  event_reader.rs  geoip_lpm_manager.rs  ids_map_manager.rs  ids_mirror_map_manager.rs  ipset_map_manager.rs  kernel_probe.rs  kfunc.rs  kfunc_attach.rs  kfunc_loader.rs  l7_ports_manager.rs  lb_map_manager.rs  loader.rs  lpm_coordinator.rs  map_manager.rs  map_store.rs  metrics_reader.rs  mod.rs  nat_map_manager.rs  netkit.rs  netkit_discovery.rs  qos_map_manager.rs  ratelimit_lpm_manager.rs  ratelimit_map_manager.rs  self_binding_manager.rs  tenant_subnet_map_manager.rs  tenant_vlan_map_manager.rs  threatintel_map_manager.rs  token_bootstrap.rs  (+1 more)
crates/adapters/src/geoip/: maxmind_adapter.rs  mod.rs
crates/adapters/src/grpc/: alert_service.rs  mod.rs  server.rs
crates/adapters/src/http/: agent_handler.rs  alert_handler.rs  alias_handler.rs  audit_handler.rs  capture_handler.rs  conntrack_handler.rs  ddos_handler.rs  dlp_handler.rs  dns_handler.rs  domain_handler.rs  error.rs  fingerprint_handler.rs  firewall_handler.rs  health_handler.rs  ids_handler.rs  ips_handler.rs  l7_handler.rs  lb_handler.rs  metrics_handler.rs  mitre_handler.rs  mod.rs  nat_handler.rs  openapi.rs  ops_handler.rs  qos_handler.rs  ratelimit_handler.rs  response_handler.rs  router.rs  routing_handler.rs  server.rs  state.rs  threatintel_handler.rs  tls.rs  tls_handler.rs  validation.rs  zone_handler.rs
crates/adapters/src/net/: gratuitous_arp.rs  iface_mac.rs  mod.rs  pcap_capture.rs
crates/adapters/src/netfilter/: conntrack.rs  event_stream.rs  mod.rs
crates/adapters/src/storage/: fingerprint_store_redb.rs  mod.rs  redb_alert_store.rs  redb_audit_store.rs  redb_rule_change_store.rs
crates/adapters/src/threatintel/: http_feed_fetcher.rs  mod.rs
crates/adapters/src/warden/: arp.rs  events.rs  map_write.rs  mod.rs  pcap.rs  uprobe.rs
crates/adapters/tests/fixtures/: jwt_test_ed25519.pem  jwt_test_ed25519.pub.pem  jwt_test_key.pem  jwt_test_key.pub.pem
crates/agent/: Cargo.toml
crates/agent/src/: api_client.rs  cli.rs  commands.rs  ebpf_lifecycle.rs  ebpf_metrics.rs  lib.rs  main.rs  reload.rs  runtime.rs  schedule_eval.rs  shutdown.rs  startup.rs
crates/agent/src/http/: agent_handler.rs  alert_handler.rs  alias_handler.rs  audit_handler.rs  capture_handler.rs  conntrack_handler.rs  dns_handler.rs  domain_handler.rs  error.rs  firewall_handler.rs  geoip_handler.rs  health_handler.rs  (+17 more)
crates/application/: Cargo.toml
crates/application/benches/: service_overhead.rs
crates/application/src/: alert_enrichment.rs  alert_event.rs  alert_pipeline.rs  alert_replay.rs  alias_service_impl.rs  audit_service_impl.rs  config_reload.rs  conntrack_service_impl.rs  ddos_service_impl.rs  dlp_service_impl.rs  dns_blocklist_service_impl.rs  dns_cache_service_impl.rs  domain_reputation_service_impl.rs  feed_update.rs  firewall_service_impl.rs  ids_service_impl.rs  ips_service_impl.rs  l7_service_impl.rs  lb_service_impl.rs  lib.rs  nat_service_impl.rs  packet_pipeline.rs  qos_service_impl.rs  ratelimit_service_impl.rs  reputation_enforcement.rs  retry.rs  routing_service_impl.rs  schedule_service_impl.rs  threatintel_service_impl.rs  vip_announcer_service_impl.rs  zone_service_impl.rs
crates/domain/: Cargo.toml
crates/domain/benches/: alert_router.rs  alias_resolver.rs  ddos_engine.rs  dlp_engine.rs  dns_engine.rs  dns_parser.rs  feed_parser.rs  firewall_engine.rs  ids_engine.rs  ips_engine.rs  l7_engine.rs  l7_parsers.rs  lb_engine.rs  ratelimit_engine.rs  threatintel_engine.rs
crates/domain/src/: lib.rs
crates/ebpf-programs/tc-ids/: Cargo.toml
crates/ebpf-programs/xdp-firewall-reject/: Cargo.toml
crates/ebpf-programs/xdp-loadbalancer/: Cargo.toml
crates/ebpf-programs/xdp-vip-announcer/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: constants.rs  lib.rs  logging.rs  metrics.rs  system_metrics.rs
crates/infrastructure/tests/: config_examples_parse.rs
crates/warden/: Cargo.toml
crates/warden-client/: Cargo.toml
crates/warden-client/src/: lib.rs
crates/warden/src/: dlp_scan.rs  host_ops.rs  lib.rs  main.rs  map_engine.rs  net_ops.rs  server.rs  uprobe_ops.rs  userns_bootstrap.rs
crates/warden/tests/: delegate.rs  maps.rs  net.rs  reconnect.rs  ringbuf.rs  serve.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: build_ebpf.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_alert_router.rs  fuzz_alerts_sse_filter.rs  fuzz_alias.rs  fuzz_audit.rs  fuzz_auth.rs  fuzz_config.rs  fuzz_conntrack.rs  fuzz_conntrack_settings.rs  fuzz_ddos.rs  fuzz_dlp_scan.rs  fuzz_dns_parser.rs  fuzz_domain_matcher.rs  fuzz_domain_reputation.rs  fuzz_feed_parser.rs  fuzz_firewall.rs  fuzz_ids_ips.rs  fuzz_l7_parsers.rs  fuzz_loadbalancer.rs  fuzz_nat.rs  fuzz_packet_event.rs  fuzz_ratelimit.rs  fuzz_ratelimit_tiers.rs  fuzz_routing.rs  fuzz_threatintel_engine.rs  fuzz_zone.rs
(+563 files in other folders)
