[workspace]
resolver = "2"
members = [
    "crates/ebpf-common",
    "crates/domain",
    "crates/ports",
    "crates/application",
    "crates/adapters",
    "crates/infrastructure",
    "crates/agent",
    "crates/warden-proto",
    "crates/warden-client",
    "crates/warden",
    "crates/xtask",
]
# eBPF program crates target bpfel-unknown-none (nightly) — excluded from default build
# Build via: cargo xtask ebpf-build
exclude = [
    "crates/ebpf-helpers",
    "crates/ebpf-programs/xdp-firewall",
    "crates/ebpf-programs/xdp-firewall-reject",
    "crates/ebpf-programs/xdp-ratelimit",
    "crates/ebpf-programs/xdp-ratelimit-syncookie",
    "crates/ebpf-programs/xdp-loadbalancer",
    "crates/ebpf-programs/xdp-vip-announcer",
    "crates/ebpf-programs/xdp-pass",
    "crates/ebpf-programs/tc-dns",
    "crates/ebpf-programs/tc-ids",
    "crates/ebpf-programs/tc-threatintel",
    "crates/ebpf-programs/tc-conntrack",
    "crates/ebpf-programs/tc-nat-ingress",
    "crates/ebpf-programs/tc-nat-egress",
    "crates/ebpf-programs/tc-qos",
    "crates/ebpf-programs/tc-scrub",
    "crates/ebpf-programs/uprobe-dlp",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
license = "AGPL-3.0-only"
publish = false
repository = "https://github.com/ebpfsentinel/ebpfsentinel"
rust-version = "1.95"

[workspace.dependencies]
# eBPF
aya = "0.13.1"
aya-obj = "0.2.1"
object = { version = "0.39.1", default-features = false, features = ["elf", "read_core"] }
aya-ebpf = "0.1.1"
aya-build = "0.1.3"
aya-log = "0.2.1"
aya-log-ebpf = "0.1.0"
network-types = "0.1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-rustls = "0.26"
async-trait = "0.1"

# HTTP
axum = "0.8"
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.8"
governor = "0.10"

# gRPC
tonic = { version = "0.14", features = ["tls-aws-lc"] }
tonic-health = "0.14"
tonic-reflection = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
tokio-stream = "0.1"

# Storage
redb = "4.1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus-client = "0.24"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }

# File watching
notify = "8"
notify-debouncer-mini = "0.7"

# JWT & Crypto
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
sha2 = "0.11.0"

# OpenTelemetry
opentelemetry = { version = "0.32.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.32.1", features = ["logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["logs", "grpc-tonic", "http-proto"] }

# Config & Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
postcard = { version = "1", default-features = false, features = ["use-std"] }

# GeoIP
maxminddb = "0.28.1"
flate2 = "1"
tar = "0.4"

# Packet capture
pcap = "2.4"

# Regex
regex = "1"

# LRU cache
lru = "0.18.0"

# Kubernetes (optional, behind `kubernetes` feature in adapters)
kube = { version = "3.1", default-features = false, features = ["client", "runtime", "rustls-tls"] }
k8s-openapi = "0.27"

# Async utilities
futures-util = "0.3"
arc-swap = "1"

# System
libc = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Testing & Benchmarking
tempfile = "3"
base64 = "0.22"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.11"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Internal crates
ebpf-common = { path = "crates/ebpf-common" }
domain = { path = "crates/domain" }
ports = { path = "crates/ports" }
application = { path = "crates/application" }
adapters = { path = "crates/adapters" }
infrastructure = { path = "crates/infrastructure" }
ebpfsentinel-agent = { path = "crates/agent" }
ebpfsentinel-warden-proto = { path = "crates/warden-proto" }
ebpfsentinel-warden-client = { path = "crates/warden-client" }
ebpfsentinel-warden = { path = "crates/warden" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Bounded casts in eBPF / kernel-size paths are intentional.
cast_possible_truncation = "allow"
# Eponymous bindings like `cgroup1_id` / `cgroup_id` are clearer
# than disambiguated names in eBPF event tests.
similar_names = "allow"
