[package]
name = "adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { workspace = true }
ports = { workspace = true }
infrastructure = { workspace = true }
ebpf-common = { workspace = true, features = ["userspace"] }
ebpfsentinel-warden-client = { workspace = true, features = ["fd-pass"] }

anyhow = { workspace = true }
arc-swap = { workspace = true }
libc = { workspace = true }
jsonwebtoken = { workspace = true }
aya = { workspace = true }
aya-obj = { workspace = true }
object = { workspace = true }
aya-log = { workspace = true }
axum = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
governor = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
tokio-stream = { workspace = true }
redb = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
sha2 = { workspace = true }
maxminddb = { workspace = true }
ipnetwork = "0.21"
lru = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
pcap = { workspace = true, optional = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[features]
default = ["kubernetes"]
pcap-capture = ["pcap"]
kubernetes = ["dep:kube", "dep:k8s-openapi", "dep:futures-util"]

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
ports = { workspace = true, features = ["test-utils"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
base64 = { workspace = true }
criterion = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_31"] }

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "grpc_serialization"
harness = false

[[bench]]
name = "ebpf_map_ops"
harness = false

[lints]
workspace = true
