[package]
name = "ebpfsentinel-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ebpfsentinel-agent"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
ports = { workspace = true }
application = { workspace = true }
adapters = { workspace = true }
infrastructure = { workspace = true }
ebpf-common = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
