[package]
name = "ebpfsentinel-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "ebpfsentinel_agent"
path = "src/lib.rs"

[[bin]]
name = "ebpfsentinel-agent"
path = "src/main.rs"


[features]
default = ["pcap-capture"]
pcap-capture = ["adapters/pcap-capture"]

[dependencies]
domain = { workspace = true }
ports = { workspace = true }
application = { workspace = true }
adapters = { workspace = true }
infrastructure = { workspace = true }
ebpf-common = { workspace = true }

tokio = { workspace = true }
arc-swap = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio-util = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
