[package]
name = "ebpfsentinel-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "ebpfsentinel_agent"
path = "src/lib.rs"

[[bin]]
name = "ebpfsentinel-agent"
path = "src/main.rs"


[features]
default = ["pcap-capture", "kubernetes"]
pcap-capture = ["adapters/pcap-capture"]
kubernetes = ["adapters/kubernetes", "dep:k8s-openapi"]

[dependencies]
domain = { workspace = true }
ports = { workspace = true }
application = { workspace = true }
adapters = { workspace = true }
infrastructure = { workspace = true }
ebpf-common = { workspace = true }
ebpfsentinel-warden = { workspace = true }

tokio = { workspace = true }
arc-swap = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
# HTTP control-plane (driving adapter) deps — the REST API layer lives here.
axum = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
tokio-rustls = { workspace = true }
jsonwebtoken = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio-util = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_31"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
ports = { workspace = true, features = ["test-utils"] }
async-trait = { workspace = true }

[lints]
workspace = true
