[package]
name = "application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain = { workspace = true }
ports = { workspace = true }
ebpf-common = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
ports = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
