[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain = { workspace = true }
ports = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus-client = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
