[package]
name = "ebpfsentinel-warden"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "ebpfsentinel_warden"
path = "src/lib.rs"

# `warden` is the privileged control-plane sidecar; `ebpfsentinel-token-launch` is
# the single-container / systemd launcher. Both share the library above.
[[bin]]
name = "warden"
path = "src/main.rs"

[[bin]]
name = "ebpfsentinel-token-launch"
path = "src/bin/ebpfsentinel-token-launch.rs"

[dependencies]
libc = { workspace = true }
ebpfsentinel-warden-proto = { workspace = true }
