[package]
name = "ebpfsentinel-warden"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "ebpfsentinel_warden"
path = "src/lib.rs"

# `warden` is the privileged control-plane sidecar; `warden-token` is
# the single-container / systemd launcher. Both share the library above.
[[bin]]
name = "warden"
path = "src/main.rs"

[[bin]]
name = "warden-token"
path = "src/bin/warden-token.rs"

[dependencies]
libc = { workspace = true }
ebpfsentinel-warden-proto = { workspace = true }
# Used by `BrokerHostOps` so the userns `warden-serve` can forward host-network
# ops to the resident broker over the warden protocol.
ebpfsentinel-warden-client = { workspace = true }

[dev-dependencies]
ebpfsentinel-warden-client = { workspace = true, features = ["fd-pass"] }
tempfile = { workspace = true }
