[package]
name = "xdp-loadbalancer"
version = "0.0.0-dev"
edition = "2024"

[dependencies]
aya-ebpf = "0.1.1"
ebpf-common = { path = "../../ebpf-common", default-features = false }
ebpf-helpers = { path = "../../ebpf-helpers" }
network-types = "0.1.0"

[[bin]]
name = "xdp-loadbalancer"
path = "src/main.rs"
