[package]
name = "xdp-vip-announcer"
version = "0.0.0-dev"
edition = "2024"

[dependencies]
aya-ebpf = "0.1.1"
ebpf-common = { path = "../../ebpf-common", default-features = false }
ebpf-helpers = { path = "../../ebpf-helpers" }
network-types = "0.2.0"

[[bin]]
name = "xdp-vip-announcer"
path = "src/main.rs"
